--- a/werewolf/chatdialog.ui
+++ b/werewolf/chatdialog.ui
@@ -6,21 +6,9 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>747</width>
-    <height>423</height>
+    <width>752</width>
+    <height>491</height>
    </rect>
-  </property>
-  <property name="minimumSize">
-   <size>
-    <width>747</width>
-    <height>423</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>747</width>
-    <height>423</height>
-   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -29,9 +17,9 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>0</y>
-     <width>551</width>
-     <height>231</height>
+     <y>40</y>
+     <width>751</width>
+     <height>281</height>
     </rect>
    </property>
   </widget>
@@ -39,8 +27,8 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>260</y>
-     <width>551</width>
+     <y>350</y>
+     <width>751</width>
      <height>111</height>
     </rect>
    </property>
@@ -48,10 +36,10 @@
   <widget class="QPushButton" name="pb_send">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>380</y>
+     <x>660</x>
+     <y>460</y>
      <width>93</width>
-     <height>28</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -62,7 +50,7 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>230</y>
+     <y>320</y>
      <width>241</width>
      <height>31</height>
     </rect>
@@ -125,15 +113,162 @@
   <widget class="QPushButton" name="pb_show">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>237</y>
+     <x>660</x>
+     <y>320</y>
      <width>93</width>
-     <height>21</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string>详细信息</string>
    </property>
+  </widget>
+  <widget class="QWidget" name="wdg_title" native="true">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>751</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(222, 222, 222);
+border-color: rgb(36, 53, 81);</string>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <property name="spacing">
+     <number>0</number>
+    </property>
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
+    <item>
+     <widget class="QPushButton" name="pb_image_2">
+      <property name="minimumSize">
+       <size>
+        <width>41</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>41</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>华文新魏</family>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>^_^</string>
+      </property>
+      <property name="autoDefault">
+       <bool>true</bool>
+      </property>
+      <property name="default">
+       <bool>false</bool>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="lb_title_2">
+      <property name="font">
+       <font>
+        <family>华文新魏</family>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <spacer name="horizontalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>213</width>
+        <height>28</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
+     <widget class="QPushButton" name="pb_min_2">
+      <property name="minimumSize">
+       <size>
+        <width>31</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>31</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>-</string>
+      </property>
+      <property name="autoDefault">
+       <bool>true</bool>
+      </property>
+      <property name="default">
+       <bool>false</bool>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="pb_close_2">
+      <property name="minimumSize">
+       <size>
+        <width>31</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>31</width>
+        <height>31</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>X</string>
+      </property>
+      <property name="autoDefault">
+       <bool>true</bool>
+      </property>
+      <property name="default">
+       <bool>false</bool>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
