--- a/werewolf/chatitem.ui
+++ b/werewolf/chatitem.ui
@@ -1,31 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>UserItem</class>
- <widget class="QWidget" name="UserItem">
+ <class>ChatItem</class>
+ <widget class="QWidget" name="ChatItem">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>478</width>
+    <width>450</width>
     <height>60</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>260</width>
+    <width>450</width>
     <height>60</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <widget class="QLabel" name="lb_name">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>0</y>
+     <width>171</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>方正舒体</family>
+     <pointsize>11</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
   <widget class="QPushButton" name="pb_icon">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>40</width>
-     <height>40</height>
+     <x>9</x>
+     <y>9</y>
+     <width>41</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="contextMenuPolicy">
@@ -44,70 +63,77 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="lb_name">
+  <widget class="QLabel" name="lb_content">
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>10</y>
-     <width>171</width>
-     <height>22</height>
+     <y>30</y>
+     <width>291</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>方正舒体</family>
+     <family>楷体</family>
      <pointsize>11</pointsize>
     </font>
    </property>
    <property name="text">
-    <string>昵称</string>
+    <string/>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pb_chat">
+   <property name="geometry">
+    <rect>
+     <x>380</x>
+     <y>10</y>
+     <width>61</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>发消息</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pb_sex">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>0</y>
+     <width>31</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="flat">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="lb_notice">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>40</y>
+     <width>21</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="flat">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="lb_state">
    <property name="geometry">
     <rect>
-     <x>60</x>
+     <x>50</x>
      <y>30</y>
-     <width>61</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>楷体</family>
-     <pointsize>11</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>状态</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="lb_sex">
-   <property name="geometry">
-    <rect>
-     <x>60</x>
-     <y>10</y>
      <width>41</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>方正舒体</family>
-     <pointsize>11</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>性别</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="lb_level">
-   <property name="geometry">
-    <rect>
-     <x>140</x>
-     <y>30</y>
-     <width>61</width>
-     <height>22</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -117,7 +143,7 @@
     </font>
    </property>
    <property name="text">
-    <string>等级</string>
+    <string/>
    </property>
   </widget>
  </widget>
