--- a/werewolf/roomdialog.ui
+++ b/werewolf/roomdialog.ui
@@ -383,25 +383,6 @@ color: rgb(255, 255, 255);</string>
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="lb_operate">
-   <property name="geometry">
-    <rect>
-     <x>110</x>
-     <y>250</y>
-     <width>261</width>
-     <height>71</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(0, 255, 127);font: 12pt &quot;隶书&quot;;</string>
-   </property>
-   <property name="text">
-    <string>this</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
   <widget class="QTextBrowser" name="tb_message">
    <property name="geometry">
     <rect>
@@ -471,7 +452,7 @@ color: rgb(255, 255, 255);</string>
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>217</y>
+     <y>250</y>
      <width>281</width>
      <height>41</height>
     </rect>
@@ -480,7 +461,7 @@ color: rgb(255, 255, 255);</string>
     <string/>
    </property>
    <property name="autoDefault">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="default">
     <bool>false</bool>
