--- a/werewolf/ziliaodialog.ui
+++ b/werewolf/ziliaodialog.ui
@@ -1,148 +1,178 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>LoginDialog</class>
- <widget class="QDialog" name="LoginDialog">
+ <class>ZiLiaoDialog</class>
+ <widget class="QDialog" name="ZiLiaoDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>480</width>
-    <height>1000</height>
+    <width>481</width>
+    <height>609</height>
    </rect>
-  </property>
-  <property name="font">
-   <font>
-    <family>幼圆</family>
-   </font>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QLineEdit" name="le_passwd">
+  <widget class="QPushButton" name="pb_icon">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>800</y>
-     <width>201</width>
-     <height>31</height>
+     <x>30</x>
+     <y>70</y>
+     <width>61</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="text">
-    <string>123456</string>
-   </property>
-   <property name="echoMode">
-    <enum>QLineEdit::Password</enum>
+    <string/>
    </property>
   </widget>
-  <widget class="QPushButton" name="pb_login">
+  <widget class="QLabel" name="lb_name">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>840</y>
-     <width>93</width>
+     <x>130</x>
+     <y>80</y>
+     <width>121</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 170, 255);</string>
+   </property>
+   <property name="text">
+    <string>昵称：</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="tb_username">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>180</y>
+     <width>201</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="tb_sex">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>220</y>
+     <width>201</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="tb_level">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>260</y>
+     <width>201</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="tb_gameNum">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>300</y>
+     <width>201</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pb_sendMess">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>510</y>
+     <width>151</width>
      <height>28</height>
     </rect>
    </property>
-   <property name="font">
-    <font>
-     <family>华光淡古印_CNKI</family>
-     <pointsize>13</pointsize>
-    </font>
-   </property>
    <property name="text">
-    <string>登录</string>
+    <string>发消息</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pb_feedback">
+  <widget class="QPushButton" name="pb_space">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>550</y>
+     <width>151</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>他的动态</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pb_report">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>510</y>
+     <width>151</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>举报</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pb_delete">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>550</y>
+     <width>151</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>删除好友</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lb_state">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>100</y>
+     <width>121</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(85, 255, 0);</string>
+   </property>
+   <property name="text">
+    <string>在线</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pb_followRoom">
    <property name="geometry">
     <rect>
      <x>420</x>
-     <y>900</y>
-     <width>51</width>
+     <y>90</y>
+     <width>41</width>
      <height>28</height>
     </rect>
    </property>
-   <property name="font">
-    <font>
-     <family>华光胖头鱼_CNKI</family>
-     <pointsize>12</pointsize>
-    </font>
-   </property>
    <property name="text">
-    <string>反馈</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pb_register">
-   <property name="geometry">
-    <rect>
-     <x>160</x>
-     <y>840</y>
-     <width>93</width>
-     <height>28</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>华光淡古印_CNKI</family>
-     <pointsize>13</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>注册</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="lb_passwd">
-   <property name="geometry">
-    <rect>
-     <x>100</x>
-     <y>800</y>
-     <width>51</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>黑体</family>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; color:#ffffff;&quot;&gt;密码&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="lb_username">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>750</y>
-     <width>81</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>黑体</family>
-     <pointsize>12</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; color:#ffffff;&quot;&gt;用户名&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="le_username">
-   <property name="geometry">
-    <rect>
-     <x>160</x>
-     <y>750</y>
-     <width>201</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>worldd</string>
+    <string>跟房</string>
    </property>
   </widget>
   <widget class="QWidget" name="wdg_title" native="true">
@@ -155,7 +185,8 @@
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(222, 222, 222);</string>
+    <string notr="true">background-color: rgb(222, 222, 222);
+border-color: rgb(36, 53, 81);</string>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <property name="spacing">
@@ -189,7 +220,8 @@
       </property>
       <property name="font">
        <font>
-        <family>方正粗黑宋简体</family>
+        <family>华文新魏</family>
+        <pointsize>9</pointsize>
        </font>
       </property>
       <property name="text">
@@ -211,11 +243,11 @@
       <property name="font">
        <font>
         <family>华文新魏</family>
-        <pointsize>15</pointsize>
+        <pointsize>14</pointsize>
        </font>
       </property>
       <property name="text">
-       <string>登录</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;详细资料&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </item>
@@ -290,37 +322,72 @@
     </item>
    </layout>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="lb_username">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>40</y>
-     <width>481</width>
-     <height>961</height>
+     <x>90</x>
+     <y>180</y>
+     <width>72</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>用户名：</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lb_sex">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>220</y>
+     <width>51</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>性别：</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lb_level">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>260</y>
+     <width>51</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>等级：</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lb_gameNum">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>300</y>
+     <width>71</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>游戏场数：</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lb_space">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>350</y>
+     <width>401</width>
+     <height>111</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
-   <property name="pixmap">
-    <pixmap resource="resources.qrc">:/tupian/startBackGround.jpg</pixmap>
-   </property>
-   <property name="scaledContents">
-    <bool>true</bool>
-   </property>
   </widget>
-  <zorder>label</zorder>
-  <zorder>le_passwd</zorder>
-  <zorder>pb_login</zorder>
-  <zorder>pb_feedback</zorder>
-  <zorder>pb_register</zorder>
-  <zorder>lb_passwd</zorder>
-  <zorder>lb_username</zorder>
-  <zorder>le_username</zorder>
-  <zorder>wdg_title</zorder>
  </widget>
- <resources>
-  <include location="resources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
